@@ -1,3 +1,12 @@
+Wed Mar  1 00:06:19 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	From 1999-08-13 J.T. Conklin <jtc@redback.com>:
+        * config/i386/tm-i386.h (FRAME_INIT_SAVED_REGS): Replace
+        FRAME_FIND_SAVED_REGS.
+        (i386_frame_init_saved_regs): Replace i386_frame_find_saved_regs.
+        * i386-tdep.c (i386_frame_init_saved_regs, i386_pop_frame):
+        Update.
+
 Tue Feb 29 23:56:41 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	From 2000-02-23 Peter Schauer <pes@regent.e-technik.tu-muenchen.de>:
